<resources>
    <string name="app_name">Renju</string>
    <string name="logoBig">RENJU</string>
    <string name="logoSmall">renju</string>
    <string name="NewGameButton">New game</string>
    <string name="Settings">Settings</string>
    <string name="fieldSize">Field size</string>
    <string name="NewGame">NEW</string>
    <string name="x19">19 x 19</string>
    <string name="largerBoard">Board size</string>
    <string name="Description">Turn it on for larger board</string>
    <string name="BestScore">Score</string>
    <string name="startScore">0</string>
    <string name="uTurn">Turn: You</string>
    <string name="U">YOUR</string>
    <string name="BEST">BEST</string>
    <string name="SCORE">SCORE</string>
    <string name="bestScore">0</string>
    <string name="IS">IS</string>
    <string name="Theme">Theme</string>
    <string name="System">System</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
    <string name="compTurn">Turn: Computer</string>
    <string name="YourTern">Make move</string>
    <string name="NotYourTern">Wait</string>
    <string name="YouWin">You Win</string>
    <string name="YouLose">You Lose</string>
</resources>