<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".SettingsWindow">


    <TextView
        android:id="@+id/gameNameLogo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110sp"
        android:fontFamily="@font/rubik"
        android:text="@string/Settings"
        android:textAlignment="textStart"
        android:textColor="@color/u_won_only_times"
        android:textSize="45sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/Theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameNameLogo2"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/rubik"
        android:text="@string/Theme"
        android:textAlignment="textStart"
        android:textColor="?colorAccent"
        android:textSize="35sp" />


    <ToggleButton
        android:id="@+id/buttonToSystem"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonToLight"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/button_no_border"
        android:fontFamily="@font/rubik"
        android:onClick="setSystemTheme"
        android:textColor="@color/backgroundMainColorLight"
        android:textOff="@string/System"
        android:textOn="@string/System"
        android:textSize="27sp" />

    <ToggleButton
        android:id="@+id/buttonToLight"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonToDark"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/button_no_border"
        android:fontFamily="@font/rubik"
        android:onClick="setLightTheme"
        android:textColor="@color/backgroundMainColorLight"
        android:textOff="@string/Light"
        android:textOn="@string/Light"
        android:textSize="27sp" />

    <ToggleButton
        android:id="@+id/buttonToDark"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Theme"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/button_no_border"
        android:fontFamily="@font/rubik"
        android:onClick="setDarkTheme"
        android:textColor="@color/backgroundMainColorLight"
        android:textOff="@string/Dark"
        android:textOn="@string/Dark"
        android:textSize="27sp" />

    <LinearLayout
        android:layout_below="@id/boardSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/turnIt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textColor="@color/u_won_only_times"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/x19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x19"
                android:textColor="@color/u_won_only_times"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="2dp">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/boardSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonToSystem"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:fontFamily="@font/rubik"
        android:text="@string/largerBoard"
        android:textColor="@color/RENJUcolorLight"
        android:textSize="35sp" />

</RelativeLayout>